@@ -90,6 +90,7 @@ requests from users, including:
   Phil Smith
   Matthew Soldner
   Corey Sparks
+  Elena Stern
   Ingmar Sturm
   Terry Therneau
   Takahiro Tsuchiya
